core/src/main/web/app/styles/modal.scss
html {
  .modal-content {
    border-width: 5px 0 0;
    border-color: #098CCD;
  }

  .modal-header {
    border-bottom-width: 0;
  }

  $fixed-header-height: 112px;
  $fixed-footer-height: 130px;

  .modal-header.fixed {
    height: $fixed-header-height;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    width: 100%;
    background: #FFF;
    z-index: 1;
  }

  .modal-body {
    padding-top: 0;
    padding-bottom: 0;
  }

  .modal-body.fixed {
    box-sizing: border-box;
    padding-top: $fixed-header-height;
    padding-bottom: $fixed-footer-height;
    max-height: calc(100vh - 70px);
  }

  .modal-footer {
    border-width: 0;
  }

  .modal-footer.fixed {
    height: $fixed-footer-height;
    padding-top: 14px;
    padding-bottom: 15px;
    box-sizing: border-box;
    position: absolute;
    bottom: 0;
    width: 100%;
  }
}

.modal {
  h1, h2, h3, h4, h5, h6 {
    font-size: 14px;
  }
}

.filters-and-sorts {
  margin: 10px 0;
}

#saveAsFileInput {
  width: calc(100% - 40px);
}

.new-folder {
  cursor: pointer;
  margin-left: 8px;
  margin-top: 6px;
}

